test/regress/regress-14.txt
;;; ERROR: 1
(module
  (func (result(i32)
    (return (i32.const 42))))

(;; STDERR ;;;
out/test/regress/regress-14.txt:3:17: error: unexpected token "i32", expected i32, i64, f32 or f64.
  (func (result(i32)
                ^^^
;;; STDERR ;;)
